# Shopify-Store-Analytics-Data-Pipeline--Shop-Profit-

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  project_directory.md  pyproject.toml  scopes.json  shopify.duckdb  test_scopes.py
dagster_home/.telemetry/: id.yaml
dagster_home/history/: runs.db
dagster_home/history/runs/: .db  1b906855-b4ec-487d-8e2b-05cb915ff14b.db  index.db
dagster_home/schedules/: schedules.db
dagster_home/storage/: shopify_ingestion
dbt_transform/: .user.yml  dbt_project.yml  profiles.yml
dbt_transform/models/bi/: bi_customer_cohorts.sql  bi_customer_economics.sql  bi_customer_economics_summary.sql  bi_ltv_by_cohort_month.sql  bi_new_vs_returning_sales.sql  bi_product_performance.sql  bi_store_performance_daily.sql  bi_total_sales_breakdown.sql
dbt_transform/models/mart/: schema.yml
dbt_transform/models/staging/: schema.yml  sources.yml  stg_shopify_customers.sql  stg_shopify_order_items.sql  stg_shopify_order_lines.sql  stg_shopify_orders.sql  stg_shopify_products.sql  stg_shopify_variants.sql
dbt_transform/snapshots/: dim_product_snapshot.sql  snapshot_dim_product.sql
dbt_transform/tests/: assert_dim_product_one_current_row.sql  assert_fct_orders_unique_grain.sql  assert_fct_orders_valid_timestamp.sql
ingestion/: ingest_data.py  ingest_orders.py  shopify_client.py
orchestration/: assets.py  definitions.py
shopify_app/shop-profit/: package-lock.json  package.json  shopify.app.toml
shopify_ingestion/: ingest_data.py  run_ingestion.py  shopify.duckdb  shopify_client.py
(+12 files in other folders)
